# vk_badapple_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  prepare_video.sh
bot/: CMakeLists.txt
bot/include/: message_handler.hpp  string_utils.hpp
bot/include/commands/: badapple.hpp
bot/src/: main.cpp  message_new.cpp  string_utils.cpp
bot/src/commands/: badapple.cpp
cmake/: initialize_submodule.cmake
modules/: CMakeLists.txt
